opam-version: "2.0"
name:         "jupyter-async"
bug-reports:  "https://github.com/LaurentMazare/ocaml-jupyter-async/issues"
homepage:     "https://github.com/LaurentMazare/ocaml-jupyter-async"
dev-repo:     "git+https://github.com/LaurentMazare/ocaml-jupyter-async.git"
maintainer:   "Laurent Mazare <lmazare@gmail.com>"
authors:      [ "Laurent Mazare" ]

version: "dev"

build: [["dune" "build" "-p" name "-j" jobs]]
install: []
remove:  []

run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]

depends: [
  "dune" {>= "2.0.0"}
  "ocaml" {>= "4.06"}
  "ocaml-compiler-libs"
  "async"
  "base"
  "ppx_expect"
  "ppx_let"
  "ppx_yojson_conv_lib"
  "stdio"
  "yojson"
  "zmq"
  "zmq-async"
]

depopts: [
]

conflicts: [
]

synopsis: "An OCaml kernel for Jupyter notebooks using async."
description: """
An OCaml kernel for Jupyter notebooks using async.
"""
