(library
  (name jupyter_async)
  (public_name jupyter-async)
  (libraries
    async
    base
    compiler-libs.toplevel
    core_kernel.unpack_buffer
    cryptokit
    jupyter_async_utop
    uuidm
    zmq-async
  )
  (preprocess (pps ppx_bin_prot ppx_let ppx_sexp_conv ppx_yojson_conv))
)
(rule
 (targets ppx_preprocess.ml)
 (deps ppx_preprocess.cppo.ml)
 (action (run %{bin:cppo} -V OCAML:%{ocaml_version} %{deps} -o %{targets}))
)
