(library
  (name jupyter_async_toploop)
  (public_name jupyter-async.toploop)
  (libraries
    async
    base
    compiler-libs.toplevel
    core_kernel.unpack_buffer
    cryptokit
    jupyter_async
    jupyter_async_message
    jupyter_async_utop
    uuidm
    zmq-async
  )
  (preprocess (pps ppx_bin_prot ppx_let ppx_sexp_conv ppx_yojson_conv))
)
(rule
 (targets rewrite.ml)
 (deps rewrite.cppo.ml)
 (action (run %{bin:cppo} -V OCAML:%{ocaml_version} %{deps} -o %{targets}))
)

